# GPU_IPC

./: CMakeLists.txt  CMakePresets.json  Dockerfile
.github/workflows/: build.yml  docker.yml
GPU_IPC/: GIPC.cu  MASPreconditioner.cu  PCG_SOLVER.cu  gl_main.cpp  mlbvh.cu
